# AhLianBrainBook

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  E2E_TEST_GAPS.md  FEATURE_GAPS.md  FEATURE_GAP_SPEC.md  IMPLEMENTATION_TRACKER.md  LICENSE  PROJECT_CLUSTER_IMPLEMENTATION.md  README.md  TEST_REPORT.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
e2e-test/: .env.example  conftest.py  pyproject.toml
e2e-test/helpers/: api_client.py  minio_client.py  page_helpers.py
e2e-test/tests/: test_00_data_population.py  test_01_brain_crud.py  test_02_cluster_crud.py  test_03_neuron_crud.py  test_04_tags.py  test_05_attachments.py  test_06_revisions.py  test_07_templates.py  test_08_search.py  test_09_dashboard.py  test_10_favorites_page.py  test_11_trash_page.py  test_12_dark_mode.py  test_13_navigation.py  test_14_neuron_links.py  test_15_nested_clusters.py  test_16_keyboard_shortcuts.py  test_17_revision_workflow.py  test_18_import_export.py  test_19_reminders.py  test_20_notifications.py  test_21_error_handling.py  test_22_ai_assist.py  test_22_http_caching.py  test_22_image_optimization.py  test_23_sse_notifications.py  test_24_code_section.py  test_25_graph_performance.py  test_26_thoughts.py  test_27_spaced_repetition.py  test_28_reminder_description.py  test_29_neuron_sharing.py  test_30_todo_cluster.py  test_31_settings.py  test_32_ai_research_cluster.py  test_33_markdown_export.py  test_34_ai_assist_deep_agent.py
intelligence-service/: .dockerignore  Dockerfile  pyproject.toml
(+702 files in other folders)
