[project]
name = "brainbook-intelligence"
version = "0.1.0"
description = "AI agent service for BrainBook using FastAPI and LangGraph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langgraph>=0.2",
    "langchain-ollama>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic-settings>=2.7",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
